<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/modal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/fragment_item_detail_title" />


        <TextView
            android:id="@+id/tv_compra_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_item_detail_installments" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/compra_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Shingeki no kyojin vol. 10" />

        <TextView
            android:id="@+id/tv_compra_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_item_detail_installments_amount_to_pay" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/compra_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:text="3500" />

        <TextView
            android:id="@+id/tv_compra_cuotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/fragment_item_detail_installments_amount"
            tools:text="Number cuotas" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cuotas_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/modal_button_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_item_detail_positive_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/modal_button_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_item_detail_negative_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>